--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-stream",
+  "name": "dotschool",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,17 +12,28 @@
     "server:seeds": "node server/seeds"
   },
   "keywords": [],
-  "author": "",
+  "author": "@edilovaysky",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.15",
+    "persist": "^0.2.7",
+    "popper": "^1.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.1"
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
+    "redux-thunk": "^2.3.0",
+    "zoomus-jssdk": "^1.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
