--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "@edilovaysky",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.528.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
