--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.10",
+    "express-mailer": "^0.3.1",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.15",
     "multer": "^1.4.2",
+    "nodemailer": "^6.3.0",
+    "nodemailer-smtp-transport": "^2.7.4",
     "persist": "^0.2.7",
     "popper": "^1.0.1",
     "react": "^16.8.6",
@@ -38,6 +41,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
+    "sendmail": "^1.6.1",
     "zoomus-jssdk": "^1.4.2"
   },
   "devDependencies": {
