--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.17.1",
     "express-form-data": "^2.0.10",
     "express-mailer": "^0.3.1",
+    "http": "0.0.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.15",
@@ -42,6 +43,8 @@
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "sendmail": "^1.6.1",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "zoomus-jssdk": "^1.4.2"
   },
   "devDependencies": {
