--- a/package.json
+++ b/package.json
@@ -15,56 +15,56 @@
   "author": "@edilovaysky",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.528.0",
+    "amazon-ses": "0.0.3",
+    "aws-sdk": "^2.553.0",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-form-data": "^2.0.10",
     "express-mailer": "^0.3.1",
     "http": "0.0.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.15",
+    "mongoose": "^5.7.6",
     "multer": "^1.4.2",
-    "nodemailer": "^6.3.0",
+    "nodemailer": "^6.3.1",
     "nodemailer-smtp-transport": "^2.7.4",
     "persist": "^0.2.7",
     "popper": "^1.0.1",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-dropzone": "^10.1.9",
-    "react-redux": "^7.1.0",
-    "react-router-dom": "^5.0.1",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "react-dropzone": "^10.1.10",
+    "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
-    "sendmail": "^1.6.1",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "zoomus-jssdk": "^1.4.2"
+    "zoomus-jssdk": "^1.6.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
     "babel-loader": "^8.0.6",
-    "concurrently": "^4.1.0",
+    "concurrently": "^4.1.2",
     "css-loader": "^2.1.1",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
     "node-sass": "^4.12.0",
     "request": "^2.88.0",
-    "rimraf": "^2.6.3",
-    "sass-loader": "^7.1.0",
+    "rimraf": "^2.7.1",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.7.1"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   }
 }
