--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "amazon-ses": "0.0.3",
     "aws-sdk": "^2.553.0",
     "axios": "^0.19.0",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
