--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 DB_HOST=localhost
 DB_NAME=neuron
 DB_PORT=32768
+MAIL_NAME=neuronmailsender
+MAIL_HOST=gmail.com
+MAIL_PASS=G*T2ntT1pYcn
+ACCESS_KEY_ID_AMAZON_SES=AKIAI5WNDQBR7DMETTCQ
+SECRET_ACCESS_KEY_AMAZON_SES=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
