--- a/server/.env
+++ b/server/.env
@@ -1,8 +1,25 @@
 DB_HOST=localhost
 DB_NAME=neuron
 DB_PORT=32768
+
+TOKEN_SECRET=ludfkasdjkk23rj0f[sj99jls--dljie
+
 MAIL_NAME=neuronmailsender
 MAIL_HOST=gmail.com
 MAIL_PASS=G*T2ntT1pYcn
-ACCESS_KEY_ID_AMAZON_SES=AKIAI5WNDQBR7DMETTCQ
-SECRET_ACCESS_KEY_AMAZON_SES=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
+
+AMAZON_ACCESS_KEY_ID=AKIAI5WNDQBR7DMETTCQ
+AMAZON_SECRET_ACCESS_KEY=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
+AMAZON_REGION=us-east-1
+AMAZON_ENDPOINT=https://s3.us-east-1.amazonaws.com
+
+AIRNODE_ACCESS_KEY_ID=ca94494ba5544cdc90660a8ca3b40415
+AIRNODE_SECRET_KEY=d6359c336f454b439fff982cc25ba079
+AIRNODE_REGION=RegionOne
+AIRNODE_ENDPOINT=https://mgmt.airnode.ru:8080
+AIRNODE_GETOBJECT_PATH=https://mgmt.airnode.ru:8080/swift/v1/3faea6fc2cd24edda555f2a7b559ac50
+
+MAIL_ACCESS_KEY_ID=sHGdyEex47fVtP85ghTn1K
+MAIL_SECRET_KEY=4A6gk1f3oo7K55nWuqzBKynaTuCpJkxopbm4c3eUXzE1
+MAIL_REGION=ru-msk
+MAIL_ENDPOINT=http://hb.bizmrg.com
