--- a/package.json
+++ b/package.json
@@ -16,56 +16,52 @@
   "license": "ISC",
   "dependencies": {
     "amazon-ses": "0.0.3",
-    "aws-sdk": "^2.553.0",
+    "aws-sdk": "^2.596.0",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.4.1",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-form-data": "^2.0.10",
-    "express-mailer": "^0.3.1",
     "http": "0.0.0",
     "jquery": "^3.4.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.6",
+    "mongoose": "^5.8.3",
     "multer": "^1.4.2",
-    "nodemailer": "^6.3.1",
-    "nodemailer-smtp-transport": "^2.7.4",
+    "nodemailer": "^6.4.2",
     "persist": "^0.2.7",
     "popper": "^1.0.1",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "react-dropzone": "^10.1.10",
-    "react-redux": "^7.1.1",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-dropzone": "^10.2.1",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "redux": "^4.0.4",
+    "redux": "^4.0.5",
     "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
     "redux-persist": "^5.10.0",
     "redux-thunk": "^2.3.0",
     "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
-    "zoomus-jssdk": "^1.6.0"
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-proposal-class-properties": "^7.7.4",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-react": "^7.7.4",
     "babel-loader": "^8.0.6",
     "concurrently": "^4.1.2",
     "css-loader": "^2.1.1",
     "faker": "^4.1.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.7.0",
-    "node-sass": "^4.12.0",
+    "node-sass": "^4.13.0",
     "request": "^2.88.0",
     "rimraf": "^2.7.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack": "^4.41.4",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.10.1"
   }
 }
